--- a/src/components/RewardsPage.css
+++ b/src/components/RewardsPage.css
@@ -60,8 +60,7 @@
     flex-direction: column;
   }
   
-  .profile-image {
-    background-image: url("https://cdn.usegalileo.ai/stability/c1a1d335-5b66-4a90-9ea8-ebd75c8194e4.png");
+  .profile-image img {
     background-size: cover;
     background-position: center;
     width: 128px;
